--- a/src/layout/layout.html.ejs
+++ b/src/layout/layout.html.ejs
@@ -52,7 +52,14 @@
     <meta name="msapplication-tap-highlight" content="<%= theme.webApp.tapHighlight %>">
 
     <style>
+      html {
+        font-family: Arial, sans-serif;
+      }
 
+      body {
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
   <body>
