--- a/src/modules/protobot-ui/components/conversational-flow-topic/style.css
+++ b/src/modules/protobot-ui/components/conversational-flow-topic/style.css
@@ -1,8 +1,9 @@
 .flex-area {
+  overflow:hidden;
   display: flex;
-
   margin: 20px auto;
   max-width: 800px;
+  border-radius: 10px;
 }
 
 .flex-1 {
