style: changed some style for authoring page and micro-page

--- a/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
@@ -1,5 +1,16 @@
+h2 {
+  margin-left: 20px;
+}
+
+.topic-list {
+  font-size: 20px;
+}
+
 .button {
-  background: green;
+  margin-left: 20px;
+  background: black;
   color: white;
+  font-size: 20px;
   padding: 12px;
+  border-radius: 10px;
 }
