--- a/src/modules/protobot-ui/components/conversational-flow-topic/style.css
+++ b/src/modules/protobot-ui/components/conversational-flow-topic/style.css
@@ -1,14 +1,14 @@
 .flex-area {
   overflow:hidden;
   display: flex;
-  margin: 20px auto;
+  margin: 20px;
   max-width: 800px;
   border-radius: 10px;
 }
 
 .flex-1 {
   flex: 1;
-  background: coral;
+  background:hsl(242, 46%, 66%);
   padding: 12px;
 }
 
@@ -20,8 +20,13 @@
 
 .text-area {
   width: 100%;
+  font-size : 15px;
 }
 
 .sub {
-  margin-left: 80px
+  margin-left: 80px;
+}
+
+.sub div {
+  background:skyblue;
 }
