--- a/src/modules/protobot-ui/components/protobot-designer-ui/style.css
+++ b/src/modules/protobot-ui/components/protobot-designer-ui/style.css
@@ -6,7 +6,7 @@
 }
 
 .left {
-  background: #888888;
+  background: rgb(94, 94, 94);
   color: white;
   padding: 10px;
   height: 100vh
@@ -19,7 +19,7 @@
 }
 
 .right {
-  background: #888888;
+  background:rgb(94, 94, 94);
   color: white;
   padding: 10px;
   height: 100vh
