--- a/src/modules/protobot-ui/components/utterance-review-item/style.css
+++ b/src/modules/protobot-ui/components/utterance-review-item/style.css
@@ -1,11 +1,11 @@
 
+
 .feed{
   display:flex;
 }
 .feed.feed__right{
   flex-direction: row-reverse;
 }
-
 
 .label{
   font-weight: bold;
@@ -16,7 +16,11 @@
   text-align: right;
 }
 
-.feed.feed__right .button-container{
+.select-container{
+  display: flex;
+}
+
+.feed.feed__right .select-container{
   flex-direction: row-reverse;
 }
 
@@ -27,37 +31,59 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
-.user-say{
-  border-radius: 15px;
-  /*background: cornflowerblue;*/
-  width: 300px;
-  height: 70px;
+.bot-label{
+  font-weight: bold;
+  margin-left: 10px;
   font-family: 'Noto Sans', sans-serif;
 }
 
+.utterance{
+  font-family: 'Raleway', sans-serif;
+  border-radius: 10px;
+  font-size: 12pt;
+  font-weight: bold;
+  text-align: center;
+  background: cornflowerblue;
+  color: #fff;
+  width: 300px;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  /* font-family: 'Noto Sans', sans-serif; */
+}
+
+.utterance.utterance__right{
+  /* border-radius: 10px;
+  font-size: 15pt; */
+  background:black;
+
+  /* color: #fff;
+  width: 300px;
+  padding: 20px;
+  margin: 10px;
+  font-family: 'Noto Sans', sans-serif; */
+}
 
 .bot-part {
   float:left;
   clear:both;
 }
 
-.bot-label{
-  font-weight: bold;
+.select-box {
+  height: 30px;
+}
+
+.input-box{
+  height: 30px;
+  font-size: 12pt;
+  text-align: center;
   margin-left: 10px;
-  font-family: 'Noto Sans', sans-serif;
+  margin-right: 10px;
 
 }
 
-.bot-say{
-  border-radius: 15px;
-  /*background: #73AD21;*/
-  padding: 20px;
-  width: 300px;
-  height: 70px;
-  font-family: 'Noto Sans', sans-serif;
-
-}
-
-.button-container{
-  display: flex;
+.option {
+  zoom: 150%;
+  /* font-size: 10pt; */
+  /* padding:5px 0; */
 }
