--- a/src/modules/protobot-ui/components/protobot-micro/style.css
+++ b/src/modules/protobot-ui/components/protobot-micro/style.css
@@ -1,13 +1,13 @@
 h1 {
     text-align: center;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h3 {
     text-align: right;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
-
+/*
 .feed{
     display:flex;
 }
@@ -16,10 +16,9 @@ h3 {
     flex-direction: row-reverse;
 }
 
-
 .label{
     font-weight: bold;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .feed.feed__right .label{
@@ -28,47 +27,43 @@ h3 {
 
 .feed.feed__right .button-container{
     flex-direction: row-reverse;
-}
-
-
-
-
+} */
+/*
 .user-label{
     font-weight: bold;
     text-align: right;
     padding-right: 20px;
-    font-family: 'Noto Sans', sans-serif;
-}
-
-.user-say{
-    border-radius: 15px;
-    /*background: cornflowerblue;*/
-    width: 300px;
-    height: 70px;
-    font-family: 'Noto Sans', sans-serif;
-}
-
-.bot-part {
-    float:left;
-    clear:both;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .bot-label{
     font-weight: bold;
     margin-left: 10px;
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 
+} */
+/*
+.user-say{
+    border-radius: 15px;
+    background: cornflowerblue;
+    width: 300px;
+    height: 70px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .bot-say{
     border-radius: 15px;
-    /*background: #73AD21;*/
+    /*background: #73AD21;
     padding: 20px;
     width: 300px;
     height: 70px;
     font-family: 'Noto Sans', sans-serif;
+} */
 
-}
+/* .bot-part {
+    float:left;
+    clear:both;
+} */
 
 .button-container{
     display: flex;
