build: adding crowd list on protobot-sidebar

--- a/src/modules/protobot-ui/components/protobot-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-sidebar/style.css
@@ -16,6 +16,11 @@ h2 {
   font-family: 'Open Sans', sans-serif;
 }
 
+.crowd-link {
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+
 a {
   color: coral;
 }
