--- a/src/modules/protobot-ui/components/protobot-micro-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-micro-sidebar/style.css
@@ -35,3 +35,22 @@ p {
   display: flex; */
 
 }
+
+.add-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+
+button {
+  /* -webkit-box-shadow: none;
+  -moz-box-shadow: none; */
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  background: Transparent no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;s
+  outline:none;
+}
