--- a/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
@@ -1,16 +1,35 @@
-h2 {
-  margin-left: 20px;
+h3 {
+  font-family: 'Open Sans', sans-serif;
 }
 
 .topic-list {
-  font-size: 20px;
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;}
+
+
+.commit-input {
+  background-color: white;
+  /* position: absolute;
+  top: 50%; */
+  height: 200px;
+  width: 100%;
+  color: blue;
+}
+.button-container  {
+  display: flex;
+  flex-direction: column-reverse;
+  flex:1;
 }
 
 .button {
-  margin-left: 20px;
+  margin: auto;
   background: black;
   color: white;
   font-size: 20px;
   padding: 12px;
   border-radius: 10px;
 }
+/*
+vaadin-text-area.min-height {
+  min-height: 150px;
+} */
