--- a/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
@@ -4,17 +4,23 @@ h3 {
 
 .topic-list {
   font-size: 18px;
-  font-family: 'Open Sans', sans-serif;}
+  font-family: 'Open Sans', sans-serif;
+}
 
 
 .commit-input {
-  background-color: white;
-  /* position: absolute;
-  top: 50%; */
-  height: 200px;
-  width: 100%;
+  margin: 10px;
+  --input-bg: white;
+  --input-bg-filled: white;
+  --input-font-family: 'Open Sans', sans-serif;
+  --textarea-min-height: 150px;
+  --input-font-size: 15px;
   color: blue;
+
+
 }
+
+
 .button-container  {
   display: flex;
   flex-direction: column-reverse;
