--- a/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
@@ -26,10 +26,9 @@ h3 {
 }
 
 .button {
-  margin: auto;
-  background: black;
   color: white;
   font-size: 20px;
+  bottom: 30px;
   padding: 12px;
   border-radius: 10px;
 }
