--- a/src/modules/protobot-ui/components/protobot-designer-ui/style.css
+++ b/src/modules/protobot-ui/components/protobot-designer-ui/style.css
@@ -2,8 +2,18 @@
   margin: 0;
   padding: 0;
   display: grid;
+  /* grid-template-rows: 1fr 20fr; */
   grid-template-columns: 1fr 3fr 1fr;
 }
+/*
+.top {
+  background: gray;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  color: rgb(225, 189, 255);
+  padding-left: 10px;
+  font-family: 'Miriam Libre', sans-serif;
+} */
 
 .left {
   /* background: rgb(94, 94, 94); */
