--- a/src/modules/protobot-ui/components/protobot-memo-all/style.css
+++ b/src/modules/protobot-ui/components/protobot-memo-all/style.css
@@ -1,3 +1,10 @@
+.memo-list {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+
 .micro {
   color: red;
 }
@@ -5,3 +12,4 @@
 .macro {
   color: yellow;
 }
+
