fix: add defaultTopic but not yet resolved

--- a/src/modules/protobot-ui/components/protobot-authoring/style.css
+++ b/src/modules/protobot-ui/components/protobot-authoring/style.css
@@ -3,7 +3,8 @@
 }
 
 h1 {
-  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .swap-button {
