style: styling for sidebars

--- a/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-authoring-sidebar/style.css
@@ -25,6 +25,11 @@ h3 {
   flex:1;
 }
 
+.explore, .verify {
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+}
+
 .button {
   color: white;
   font-size: 20px;
