--- a/src/modules/protobot-ui/components/protobot-memo-all/style.css
+++ b/src/modules/protobot-ui/components/protobot-memo-all/style.css
@@ -6,11 +6,21 @@
 
 
 .micro {
-  color: red;
+  background-color:rgb(253, 200, 85);
+  color:black;
+  padding: 6px;
+  border-radius: 4px;
+  margin-bottom: 5px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .macro {
-  color: yellow;
+  background-color:rgb(253, 228, 85);
+  color:black;
+  padding: 6px;
+  border-radius: 4px;
+  margin-bottom: 5px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 vaadin-checkbox {
