--- a/src/modules/protobot-ui/components/protobot-macro/style.css
+++ b/src/modules/protobot-ui/components/protobot-macro/style.css
@@ -3,11 +3,24 @@ h1 {
   font-family: 'Montserrat', sans-serif;
 }
 
+
+.node rect {
+  cursor: move;
+  fill-opacity: .9;
+  shape-rendering: crispEdges;
+}
+
+.node text {
+  pointer-events: none;
+  text-shadow: 0 1px 0 #fff;
+}
+
 .link {
   fill: none;
   stroke: #000;
   stroke-opacity: .2;
 }
+
 .link:hover {
   stroke-opacity: .5;
 }
