--- a/src/modules/protobot-ui/components/protobot-micro-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-micro-sidebar/style.css
@@ -8,6 +8,10 @@ p {
   font-family: 'Open Sans', sans-serif;
 }
 
+.item {
+  margin-bottom: 15px;
+}
+
 .topic-list {
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
