--- a/src/modules/protobot-ui/components/topic-list-item/style.css
+++ b/src/modules/protobot-ui/components/topic-list-item/style.css
@@ -1,6 +1,5 @@
-.flex-area {
+/* .flex-area {
   display: flex;
-
   margin: 20px auto;
   max-width: 800px;
 }
@@ -23,4 +22,15 @@
 
 .sub {
   padding-left: 80px
+} */
+
+.new-label {
+  background-color: rgb(82, 108, 255);
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  font-family: 'Raleway', sans-serif;
+  padding: 3px;
 }
