style: fix some font issues and header

--- a/src/modules/protobot-ui/components/protobot-macro-sidebar/style.css
+++ b/src/modules/protobot-ui/components/protobot-macro-sidebar/style.css
@@ -3,12 +3,17 @@ h2 {
   font-family: 'Open Sans', sans-serif;
 }
 
+h3 {
+  font-family: 'Open Sans', sans-serif;
+}
+
 p {
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
 }
 
 .topic-list {
+  margin-left: -10px;
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
 }
