--- a/src/layout/layout.html.ejs
+++ b/src/layout/layout.html.ejs
@@ -52,9 +52,10 @@
     <meta name="msapplication-tap-highlight" content="<%= theme.webApp.tapHighlight %>">
 
     <style>
-      html {
+      /* html {
         font-family: Arial, sans-serif;
-      }
+      } */
+      @import url('https://fonts.googleapis.com/css?family=Montserrat|Josefin+Sans|Open+Sans&display=swap');
 
       body {
         margin: 0;
