fix: highlight utterance without label

--- a/src/modules/protobot-ui/components/utterance-review-item/style.css
+++ b/src/modules/protobot-ui/components/utterance-review-item/style.css
@@ -50,6 +50,9 @@
   margin-bottom: 10px;
   /* font-family: 'Noto Sans', sans-serif; */
 }
+.utterance.utterance__no_label {
+  color: yellow;
+}
 
 .utterance.utterance__right{
   background:black;
