--- a/src/layout/layout.html.ejs
+++ b/src/layout/layout.html.ejs
@@ -53,11 +53,13 @@
 
     <style>
       @import url('https://fonts.googleapis.com/css?family=Montserrat|Josefin+Sans|Open+Sans&display=swap');
-/*
+      * {
+        box-sizing: border-box;
+      }
       body {
         margin: 0;
         padding: 0;
-      } */
+      }
     </style>
 
     <script src="https://d3js.org/d3.v3.js"></script>
