--- a/src/modules/protobot-ui/components/protobot-designer-ui/style.css
+++ b/src/modules/protobot-ui/components/protobot-designer-ui/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   display: grid;
   /* grid-template-rows: 1fr 20fr; */
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr 4fr;
 }
 /*
 .top {
@@ -15,25 +15,34 @@
   font-family: 'Miriam Libre', sans-serif;
 } */
 
-.left {
-  /* background: rgb(94, 94, 94); */
+/* .left {
+  background: rgb(94, 94, 94);
   background: #252839;
   color: white;
   padding: 10px;
   height: 100vh
-}
+} */
 
 .center {
   background: white;
   padding: 10px;
-  height: 100vh
+  padding-top: 50px;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
-.right {
+.left {
   background: #252839;
   color: white;
+  padding-top: 50px;
+  height: 100vh;
+  box-sizing: border-box;
+}
+.left-scrollable{
+  height: 100%;
   padding: 10px;
-  height: 100vh
+  overflow: auto;
+  box-sizing: border-box;
 }
 
 .center-modal {
