--- a/src/modules/protobot-ui/components/protobot-authoring/style.css
+++ b/src/modules/protobot-ui/components/protobot-authoring/style.css
@@ -1,5 +1,9 @@
-.empty-box{
-  height: 30px;
+:host{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5em 0;
 }
 
 h1 {
