--- a/src/modules/protobot-ui/components/protobot-header/style.css
+++ b/src/modules/protobot-ui/components/protobot-header/style.css
@@ -1,19 +1,28 @@
 :host{
-  display: flex;
   position: fixed;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
   width: 100%;
   left: 0;
   top: 0;
   height: 50px;
-  overflow:hidden;
   background: #252839;
   color: white;
-  padding: 0 3em;
-  box-sizing: border-box;
   border-bottom: 2px solid #333644;
+  box-sizing: border-box;
+  z-index: 9999;
 }
-:host > *{
+
+.header-inner{
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0 3em;
+  height: 50px;
+  box-sizing: border-box;
+}
+
+.header-inner > *{
   margin-right: 1em;
 }
 h1 {
@@ -38,8 +47,11 @@ ul.review-link {
   font-family: 'Open Sans', sans-serif;
   list-style: none;
   height: 100%;
+}
+ul.review-link.full-width{
   flex: 1;
 }
+
 ul.review-link > li{
   position: relative;
   display: flex;
@@ -51,9 +63,18 @@ ul.review-link > li{
 ul.review-link > li >a {
   text-decoration: none;
 }
-ul.review-link > li.active >a{
+
+ul.review-link > li.orange >a{
+  color: rgba(255, 187, 0, 0.5);
+}
+
+ul.review-link > li.active.blue >a{
   color: cornflowerblue;
 }
+ul.review-link > li.active.orange >a{
+  color: rgb(255, 187, 0);
+}
+
 ul.review-link > li.active::after{
   content:"";
   position: absolute;
@@ -62,7 +83,14 @@ ul.review-link > li.active::after{
   bottom: 0;
   width: 100%;
   height: 4px;
+}
+
+ul.review-link > li.active.blue::after{
   background: cornflowerblue;
+}
+
+ul.review-link > li.active.orange::after{
+  background: rgb(255, 187, 0);
 }
 
 .header-item-group{
