fix: fix history view as unreadable and text-area

--- a/src/modules/protobot-ui/components/conversational-flow-topic/style.css
+++ b/src/modules/protobot-ui/components/conversational-flow-topic/style.css
@@ -30,6 +30,7 @@
   outline: none;
   color: #fff;
   background: transparent;
+  font-family: 'Open Sans', sans-serif;
 }
 .text-area:hover,
 .text-area:focus{
