--- a/src/modules/protobot-ui/components/conversational-flow-utterance/style.css
+++ b/src/modules/protobot-ui/components/conversational-flow-utterance/style.css
@@ -12,6 +12,7 @@
   outline: none;
   color: #fff;
   background: transparent;
+  font-family: 'Open Sans', sans-serif;
 }
 .text-area:hover,
 .text-area:focus{
