--- a/src/modules/protobot-ui/components/protobot-start/style.css
+++ b/src/modules/protobot-ui/components/protobot-start/style.css
@@ -1,4 +1,3 @@
-
 .center-modal {
   background: #221f4d;
   font-family: 'Open Sans', sans-serif;
@@ -6,6 +5,7 @@
   color: white;
   padding: 60px 20px;
   text-align: center;
+  z-index: 99999;
 }
 
 .domain-id {
