--- a/src/modules/protobot-ui/components/protobot-designer-ui/style.css
+++ b/src/modules/protobot-ui/components/protobot-designer-ui/style.css
@@ -25,7 +25,7 @@
 
 .center {
   background: white;
-  padding: 10px;
+  padding-right: 10px;
   padding-top: 50px;
   height: 100vh;
   box-sizing: border-box;
