style: modal styling done

--- a/src/modules/protobot-ui/components/protobot-deploy-modal/style.css
+++ b/src/modules/protobot-ui/components/protobot-deploy-modal/style.css
@@ -21,7 +21,7 @@ h3 {
   font-family: 'Open Sans', sans-serif;
 }
 
-.dialog{
+.dialog {
   position: fixed;
   width:100%;
   height: 100%;
@@ -37,6 +37,7 @@ h3 {
 .button-container {
   display: flex;
   flex-direction: row-reverse;
+  margin-top: 20px;
 }
 
 .accept {
@@ -65,5 +66,8 @@ h3 {
   background-color: rgb(35, 35, 146);
   color: white;
   margin-top: 20px;
+}
 
+.money {
+  color: tomato;
 }
