--- a/src/modules/protobot-ui/components/version-managable-list2/style.css
+++ b/src/modules/protobot-ui/components/version-managable-list2/style.css
@@ -5,3 +5,10 @@
 h3 {
   font-family: 'Open Sans', sans-serif;
 }
+
+version-container {
+  display:flex;
+  flex-direction: row;
+  align-items:flex-end;
+
+}
