--- a/src/modules/protobot-ui/components/utterance-review-item/style.css
+++ b/src/modules/protobot-ui/components/utterance-review-item/style.css
@@ -1,9 +1,11 @@
 .feed{
   display:flex;
+  margin-left:200px;
 }
 
 .feed.feed__right{
   flex-direction: row-reverse;
+  margin-right:200px;
 }
 
 .label{
@@ -38,7 +40,7 @@
 
 
 .utterance {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open sans', sans-serif;
   border-radius: 10px;
   font-size: 12pt;
   font-weight: 500;
@@ -95,3 +97,4 @@
   /* font-size: 10pt; */
   /* padding:5px 0; */
 }
+
