--- a/src/layout/layout.html.ejs
+++ b/src/layout/layout.html.ejs
@@ -211,7 +211,7 @@
                 } else if (target !== name) {
                   source = paths[source];
                 } else {
-                  console.log(target, name, 'hey')
+                  // console.log(target, name, 'hey')
                   flag2 = false;
                   break;
                 }
@@ -237,11 +237,11 @@
           //   break;
           // }
           var length2 = nextNodes.length;
-          console.log(nextNodes);
-          if (length === length2) {
+          // console.log(nextNodes);
+          // if (length === length2) {
 
-            // break;
-          }
+          //   // break;
+          // }
           remainingNodes = nextNodes;
           ++x;
           noTopicNode.x = x - 1;
